--- a/Languages/English/DefInjected/RecipeDef/Recipes_Production.xml
+++ b/Languages/English/DefInjected/RecipeDef/Recipes_Production.xml
@@ -6,8 +6,7 @@
   <Make_EthanolFromAlcohol.jobString>distillation</Make_EthanolFromAlcohol.jobString>
 
 
-  <!--<Make_EthanolFromAlcohol.label>Distillation of alcohol from drinks</Make_EthanolFromAlcohol.label>-->
-  <!--<Make_EthanolFromAlcohol.description>Distillation is a process in which volatile components (vapors) evaporate from a fermented mixture and condense to form alcohol.</Make_EthanolFromAlcohol.description>-->
-  <!--<Make_EthanolFromAlcohol.jobString>Distillation</Make_EthanolFromAlcohol.jobString>-->
-
+ <Make_EthanolFromAlcohol.label>Distillation of alcohol from drinks</Make_EthanolFromAlcohol.label>
+  <Make_EthanolFromAlcohol.description>Distillation is a process in which volatile components (vapors) evaporate from a fermented mixture and condense to form alcohol.</Make_EthanolFromAlcohol.description>
+<Make_EthanolFromAlcohol.jobString>Distillation</Make_EthanolFromAlcohol.jobString>
 </LanguageData>
