--- a/Languages/Korean/DefInjected/DamageDef/Damages_Misc.xml
+++ b/Languages/Korean/DefInjected/DamageDef/Damages_Misc.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
-  <BombAntigrav.deathMessage>{0} has been killed.</BombAntigrav.deathMessage>
+  <BombAntigrav.deathMessage>{0} 살해당했습니다.</BombAntigrav.deathMessage>
 
 
 </LanguageData>
