--- a/Languages/Korean/DefInjected/RecipeDef/Recipes_Items.xml
+++ b/Languages/Korean/DefInjected/RecipeDef/Recipes_Items.xml
@@ -1,29 +1,29 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
-  <!--<MakeTrapExplosive.label>Create a box 6 min</MakeTrapExplosive.label>-->
-  <!--<MakeTrapExplosive.description>Creating a box with 6 mines.</MakeTrapExplosive.description>-->
-  <!--<MakeTrapExplosive.jobString>Creates a set of mines.</MakeTrapExplosive.jobString>-->
+  <MakeTrapExplosive.label>상자 만들기 6분</MakeTrapExplosive.label>
+  <MakeTrapExplosive.description>6개의 광산이 있는 상자 만들기.</MakeTrapExplosive.description>
+  <MakeTrapExplosive.jobString>광산 세트를 생성합니다.</MakeTrapExplosive.jobString>
 
-  <!--<MakeTrapTox.label>Crafting a Box of 6 Toxic Mines</MakeTrapTox.label>-->
-  <!--<MakeTrapTox.description>Create a box with 6 toxic mines.</MakeTrapTox.description>-->
-  <!--<MakeTrapTox.jobString>Creates a set of mines.</MakeTrapTox.jobString>-->
+ <MakeTrapTox.label>6개의 독성 광산 상자 제작</MakeTrapTox.label>
+  <MakeTrapTox.description>6개의 독성 지뢰가 있는 상자 만들기.</MakeTrapTox.description>
+  <MakeTrapTox.jobString>광산 세트를 생성합니다.</MakeTrapTox.jobString>
 
-  <!--<MakeTrapIncendiary.label>Crafting a box of 6 incendiary mines</MakeTrapIncendiary.label>-->
-  <!--<MakeTrapIncendiary.description>Crafting a box containing 6 incendiary mines.</MakeTrapIncendiary.description>-->
-  <!--<MakeTrapIncendiary.jobString>Creates a set of incendiary mines.</MakeTrapIncendiary.jobString>-->
+  <MakeTrapIncendiary.label>소이 지뢰 6개 상자 제작</MakeTrapIncendiary.label>
+  <MakeTrapIncendiary.description>소이 지뢰 6개가 들어 있는 상자 제작.</MakeTrapIncendiary.description>
+  <MakeTrapIncendiary.jobString>소이탄 세트를 생성합니다.</MakeTrapIncendiary.jobString>
 
-  <!--<MakeTrapEMP.label>Create a box 6 EMP min</MakeTrapEMP.label>-->
-  <!--<MakeTrapEMP.description>Crafting a box with 6 EMP mines.</MakeTrapEMP.description>-->
-  <!--<MakeTrapEMP.jobString>Creates a set of EMP min.</MakeTrapEMP.jobString>-->
+  <MakeTrapEMP.label>상자 만들기 6 EMP min</MakeTrapEMP.label>
+  <MakeTrapEMP.description>EMP 지뢰 6개를 담은 상자 제작.</MakeTrapEMP.description>
+  <MakeTrapEMP.jobString>EMP min 세트를 생성합니다.</MakeTrapEMP.jobString>
 
-  <!--<MakeTrapAE.label>Crafting a Box of 6 Granular Mines</MakeTrapAE.label>-->
-  <!--<MakeTrapAE.description>Create a box with 6 Granule Mines.</MakeTrapAE.description>-->
-  <!--<MakeTrapAE.jobString>Creates a set of Granular Mines.</MakeTrapAE.jobString>-->
+  <MakeTrapAE.label>6개의 세분화된 광산이 담긴 상자 제작</MakeTrapAE.label>
+  <MakeTrapAE.description>6개의 과립 광산이 있는 상자 만들기.</MakeTrapAE.description>
+  <MakeTrapAE.jobString>세분화된 광산 세트를 생성합니다.</MakeTrapAE.jobString>
 
-  <!--<MakeTrapKapk.label>Creating a box with 10 traps</MakeTrapKapk.label>-->
-  <!--<MakeTrapKapk.description>Creating a box with 10 traps.</MakeTrapKapk.description>-->
-  <!--<MakeTrapKapk.jobString>Creates a set of traps.</MakeTrapKapk.jobString>-->
+  <MakeTrapKapk.label>함정 10개가 들어 있는 상자 만들기</MakeTrapKapk.label>
+  <MakeTrapKapk.description>함정 10개가 들어 있는 상자 만들기.</MakeTrapKapk.description>
+  <MakeTrapKapk.jobString>트랩 세트를 생성합니다.</MakeTrapKapk.jobString>
 
 
 </LanguageData>
