--- a/Languages/Korean/DefInjected/ThingDef/Buildings_Art.xml
+++ b/Languages/Korean/DefInjected/ThingDef/Buildings_Art.xml
@@ -2,7 +2,7 @@
 <LanguageData>
 
   <KatXArt.label>고양이 조각</KatXArt.label>
-  <KatXArt.description>식민지를 위한 고양이 조각품. 따뜻함과 편안함을 선사합니다..</KatXArt.description>
+  <KatXArt.description>식민지를 위한 고양이 조각품. 따뜻함과 편안함을 선사합니다.</KatXArt.description>
 
 
 </LanguageData>
