--- a/Languages/Korean/DefInjected/ThingDef/Buildings_Traps.xml
+++ b/Languages/Korean/DefInjected/ThingDef/Buildings_Traps.xml
@@ -3,8 +3,8 @@
 
   <!-- Traps -->
 
-  <MinSign.label>Sign Caution mines</MinSign.label>
-  <MinSign.description>Warning sign.</MinSign.description>
+  <MinSign.label>주의 지뢰에 서명하세요</MinSign.label>
+  <MinSign.description>경고 표시.</MinSign.description>
 
 
 </LanguageData>
