--- a/Languages/Korean/DefInjected/ThingDef/Storege_Structure.xml
+++ b/Languages/Korean/DefInjected/ThingDef/Storege_Structure.xml
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
-  <ShelfTox.label>Контейнер для токсичных отходов</ShelfTox.label>
-  <ShelfTox.description>Контейнер, который может безопасно хранить большое количество токсичных отходов и из-за чего они разлагаются довольно медленно ... Нет ... Хранить внутри все равно небезопасно если вы не обращались с ними хорошо, он легко превратится в гигантскую токсичную бомбу.</ShelfTox.description>
+  <ShelfTox.label>유독성 폐기물 용기</ShelfTox.label>
+  <ShelfTox.description>많은 양의 유독 폐기물을 안전하게 보관할 수 있고 분해 속도가 느린 용기... 아뇨... 잘 처리하지 않으면 안에 보관해도 안전하지 않습니다. 쉽게 거대한 유독 폐기물로 변할 것입니다. 폭탄.</ShelfTox.description>
 
 
 </LanguageData>
