--- a/Languages/Portuguese/DefInjected/HediffDef/Hediffs_Global_Misc.xml
+++ b/Languages/Portuguese/DefInjected/HediffDef/Hediffs_Global_Misc.xml
@@ -5,5 +5,26 @@
   <EthanolBlindness.description>Cegueira temporária</EthanolBlindness.description>
   <EthanolBlindness.labelNoun>Cegueira temporária</EthanolBlindness.labelNoun>
 
+  <PhoenixRugAura.label>Calor do tapete Phoenix</PhoenixRugAura.label>
+  <PhoenixRugAura.description>Um dos efeitos de curto prazo de estar perto de uma pele de fênix é o aumento da resistência ao frio.</PhoenixRugAura.description>
+  <PhoenixRugAura.labelNoun>O calor do tapete</PhoenixRugAura.labelNoun>
+
+  <KirinRugAura.label>Frescura do tapete Kirin</KirinRugAura.label>
+  <KirinRugAura.description>Um dos efeitos de curto prazo de estar perto de uma pele kirin é o aumento da resistência ao calor.</KirinRugAura.description>
+  <KirinRugAura.labelNoun>Frescura do tapete</KirinRugAura.labelNoun>
+
+  <WyvernRugAura.label>Frescura de um tapete Wyvern</WyvernRugAura.label>
+  <WyvernRugAura.description>Um dos efeitos de curto prazo de estar perto de uma pele de wyvern é o aumento da resistência às toxinas.</WyvernRugAura.description>
+  <WyvernRugAura.labelNoun>Frescura do tapete</WyvernRugAura.labelNoun>
+
+  <BehirRugAura.label>Concentração do tapete behir</BehirRugAura.label>
+  <BehirRugAura.description>Um dos efeitos de curto prazo de estar perto da pele de um behir é o aumento das habilidades mentais.</BehirRugAura.description>
+  <BehirRugAura.labelNoun>Concentração do tatame</BehirRugAura.labelNoun>
+
+  <BagestRugAura.label>Darkvision do tapete baguete</BagestRugAura.label>
+  <BagestRugAura.description>Um dos efeitos de curto prazo de estar perto de cascas de baguete é o aumento da percepção da luz
+	.</BagestRugAura.description>
+  <BagestRugAura.labelNoun>Visão no escuro do tapete</BagestRugAura.labelNoun>
+
 
 </LanguageData>
