--- a/Languages/Portuguese/DefInjected/RecipeDef/Recipes_Production.xml
+++ b/Languages/Portuguese/DefInjected/RecipeDef/Recipes_Production.xml
@@ -6,8 +6,8 @@
   <Make_EthanolFromAlcohol.jobString>перегонка</Make_EthanolFromAlcohol.jobString>
 
 
-  <!--<Make_EthanolFromAlcohol.label>Destilação de álcool de bebidas</Make_EthanolFromAlcohol.label>-->
-  <!--<Make_EthanolFromAlcohol.description>A destilação é um processo no qual componentes voláteis (vapores) evaporam de uma mistura fermentada e se condensam para formar álcool.</Make_EthanolFromAlcohol.description>-->
-  <!--<Make_EthanolFromAlcohol.jobString>Destilação</Make_EthanolFromAlcohol.jobString>-->
+  <Make_EthanolFromAlcohol.label>Destilação de álcool de bebidas</Make_EthanolFromAlcohol.label>
+  <Make_EthanolFromAlcohol.description>A destilação é um processo no qual componentes voláteis (vapores) evaporam de uma mistura fermentada e se condensam para formar álcool.</Make_EthanolFromAlcohol.description>
+  <Make_EthanolFromAlcohol.jobString>Destilação</Make_EthanolFromAlcohol.jobString>
 
 </LanguageData>
