--- a/Languages/Portuguese/DefInjected/ThingDef/Storege_Structure.xml
+++ b/Languages/Portuguese/DefInjected/ThingDef/Storege_Structure.xml
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
-  <ShelfTox.label>Контейнер для токсичных отходов</ShelfTox.label>
-  <ShelfTox.description>Контейнер, который может безопасно хранить большое количество токсичных отходов и из-за чего они разлагаются довольно медленно ... Нет ... Хранить внутри все равно небезопасно если вы не обращались с ними хорошо, он легко превратится в гигантскую токсичную бомбу.</ShelfTox.description>
+  <ShelfTox.label>Contentor de resíduos tóxicos</ShelfTox.label>
+  <ShelfTox.description>Um recipiente que pode armazenar com segurança uma grande quantidade de lixo tóxico e fazer com que ele se decomponha lentamente... Não... Ainda não é seguro armazenar dentro dele se você não o tratar bem, ele facilmente se transformará em um tóxico gigante bombear.</ShelfTox.description>
 
 
 </LanguageData>
