--- a/Languages/English/DefInjected/ResearchProjectDef/ResearchProjects.xml
+++ b/Languages/English/DefInjected/ResearchProjectDef/ResearchProjects.xml
@@ -4,5 +4,8 @@
   <AdvancedPowerKult.label>Optimizing energy production</AdvancedPowerKult.label>
   <AdvancedPowerKult.description>Optimize energy production by changing work processes, parts and circuits.</AdvancedPowerKult.description>
 
+  <OptimizingSunLamp.label>Optimizing Sun Lamp I</OptimizingSunLamp.label>
+  <OptimizingSunLamp.description>Optimization of Sun Lamp energy consumption</OptimizingSunLamp.description>
+
 
 </LanguageData>
