--- a/Languages/Russian/DefInjected/ThingDef/Buildings_Temperature.xml
+++ b/Languages/Russian/DefInjected/ThingDef/Buildings_Temperature.xml
@@ -7,11 +7,11 @@
   <Bio_coller.label>BIO-Охладитель Льдышка</Bio_coller.label>
   <Bio_coller.description>Сердце Кирина, подключенное к системе жизнеобеспечения, из-за разницы в количестве питательных веществ в крови требует частой замены гематогена.</Bio_coller.description>
 
-  <Bio_Sun.label>BIO-Лампа Рассвет</Bio_Sun.label>
-  <Bio_Sun.description>Сердце порождения тьмы , после изучения технологий появится возможность полностью раскрыть его потенциал , из-за разницы в количестве питательных веществ в крови требует частой замены гематогена.</Bio_Sun.description>
+  <Bio_Sun.label>BIO-Лампа Рассвет Растений</Bio_Sun.label>
+  <Bio_Sun.description>Сердце порождения тьмы , после изучения технологий появится возможность полностью раскрыть его потенциал , из-за разницы в количестве питательных веществ в крови требует частой замены гематогена.(Лампа для роста растений)</Bio_Sun.description>
 
   <Bio_PSY.label>BIO-Пси Резонатор</Bio_PSY.label>
-  <Bio_PSY.description>Сердце Бехира, создающее псионический резонанс, из-за разницы в количестве питательных веществ в крови требует частой замены гематогена</Bio_PSY.description>
+  <Bio_PSY.description>Сердце Бехира, создающее псионический резонанс, из-за разницы в количестве питательных веществ в крови требует частой замены гематогена(Лампа для пси медитации)</Bio_PSY.description>
 
   <Bio_cleaning.label>BIO-Поглотитель Токсинов</Bio_cleaning.label>
   <Bio_cleaning.description>Сердце виверны способно удалить токсины с большой площади, но на это требуется время ,из-за различий в количестве питательных веществ в крови гематоген необходимо часто заменять.</Bio_cleaning.description>
